--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>EcoFinder</title>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Sigmar&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
