--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="./react.js"></script>
+    <script src="react.js"></script>
   </body>
 </html>
